@@ -351,8 +351,8 @@ Mod((2 + 2*3 + 2*3^2 + 2*3^3 + 2*3^4 + 2*3^5 + 2*3^6 + 2*3^7 + 2*3^8 + O(3^9
 Mod(O(3^9), x^2 + (1 + 3 + 2*3^4 + 3^8 + O(3^9)))
   ***   at top-level: testzellQp(e,ellmul(
   ***                 ^--------------------
-  ***   in function testzellQp: my(a,Q);a=ellpointtoz(e,P);Q=e
-  ***                                     ^--------------------
+  ***   in function testzellQp: my(a,q,Q);a=ellpointtoz(e,P);Q=e
+  ***                                       ^--------------------
   *** ellpointtoz: sorry, ellpointtoz when u not in Qp is not yet implemented.
 Mod((2 + 2*3 + 3^2 + 3^3 + 3^5 + 3^7 + O(3^10))*x + (1 + 3 + 2*3^2 + 2*3^4 +
  2*3^5 + 3^6 + 3^8 + 2*3^9 + O(3^10)), x^2 + (3 + 3^3 + 2*3^4 + 3^5 + 2*3^6 
@@ -363,6 +363,9 @@ Mod((2^2 + 2^4 + 2^5 + 2^6 + 2^8 + O(2^10))*x + (1 + 2 + 2^2 + 2^8 + O(2^11)
 ), x^2 + (1 + 2^2 + 2^4 + 2^5 + 2^7 + 2^8 + 2^9 + O(2^12)))
 Mod(O(2^11)*x + O(2^9), x^2 + (1 + 2^2 + 2^4 + 2^5 + 2^7 + 2^8 + 2^9 + O(2^1
 2)))
+4*5 + 3*5^2 + 2*5^4 + 2*5^5 + 3*5^6 + 3*5^7 + 3*5^8 + 3*5^9 + 3*5^10 + O(5^1
+1)
+O(5^10)
 [Mod(0, 11), Mod(0, 11), Mod(0, 11), Mod(1, 11), Mod(1, 11), Mod(0, 11), Mod
 (2, 11), Mod(4, 11), Mod(10, 11), Mod(7, 11), Mod(5, 11), Mod(10, 11), Mod(9
 , 11), Vecsmall([3]), [11, [9, 5, [6, 0, 0, 0]]], [0, 0, 0, 0]]
@@ -543,4 +546,4 @@ t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 + O(t^6)
   *** ellformalw: domain error in ellformalw: precision <= 0
 242.47010035195076100129810400142304776
 0
-Total time spent: 564
+Total time spent: 548
