@@ -211,12 +211,17 @@ ellinit([108/91,11664/8281,-6561/8281,708588/753571,-14348907/68574961]).disc
 e=ellinit([1,3.+I]); x=1/2+I; y=ellordinate(e,x)[1];
 ellztopoint(e,ellpointtoz(e,[x,y]))
 testzellQp(e, P)=
-{ my(a,Q);
+{ my(a,q,Q);
   a = ellpointtoz(e,P);
   Q = ellztopoint(e,a);
   if (liftall(Q-P),error([e,P]));
   print(a);
-  a^2 - ellpointtoz(e, elladd(e,P,P));
+  q = e.tate[3];
+  a = a^2;
+  if (type(a) == "t_PADIC",
+    a /= q^(valuation(a,a.p) \ valuation(q,a.p)); /* reduce mod q^Z */
+  );
+  a - ellpointtoz(e, elladd(e,P,P));
 }
 e=ellinit([0,-1,1,0,0], O(11^5));
 \\ BIB #1840
@@ -229,6 +234,9 @@ e=ellinit(ellfromj(2/9), O(3^10)); x=2; y=ellordinate(e,x)[1];
 testzellQp(e, [x,y])
 e=ellinit(ellfromj(1/4), O(2^10)); x=1/2; y=ellordinate(e,x)[1];
 testzellQp(e, [x,y])
+e=ellinit([1,-1,1,98,126],O(5^10));
+testzellQp(e, [1,14])
+
 
 ellinit([1,1], Mod(1,11))
 ellrootno(ellinit([31^4,31^6]), 31)
