@@ -11,9 +11,10 @@ Done for version 2.8.1 (released ??/??/2016):
     6- msinit objects could not be saved to file then read back in
     7- wrong value for bnrrootnumber for non-primitive characters [#1848]
     8- allow znstar(N,flag) for idealstar(,N,flag)
-    8- allow znlog(x,G) for G = znstar(N), instead of ideallog(,x,G),
+    9- allow znlog(x,G) for G = znstar(N), instead of ideallog(,x,G),
        for DL wrt. G.gen; in addition to traditional znlog(x,g), where an
        arbitrary generator g is specified
+   10- e=ellinit([1,-1,1,98,126],O(5^10)); ellpointtoz(e,[1,14]) -> div. by 0
 
   Added
     1- permtonum: allow t_VECSMALL input
